general fix on dtos, handlers
