# docs/swagger.json
@@ -1906,10 +1906,10 @@
         "internal_virtual.StartGameRequest": {
             "type": "object",
             "required": [
-                "gameType"
+                "game_type"
             ],
             "properties": {
-                "gameType": {
+                "game_type": {
                     "type": "string",
                     "minLength": 1
                 }
