# internal/virtual/virtual.dto.go
@@ -8,12 +8,12 @@ import (
 
 
 type StartGameRequest struct {
-	GameType string `json:"gameType" binding:"required,min=1"`
+	GameType string `json:"game_type" binding:"required,min=1"`
 }
 
 func (r *StartGameRequest) Validate() error{
 	if strings.TrimSpace(r.GameType) == ""{
-		return errors.New("gameType is required")
+		return errors.New("game_type is required")
 	}
 	return nil 
 }
